--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@vercel/blob": "^1.0.0",
     "bootstrap": "^5.3.5",
     "csv-parser": "^3.2.0",
-    "next": "15.2.2",
-    "react": "^19.0.0",
+    "next": "^16.0.10",
+    "react": "^19.2.3",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
