--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,20 @@
 node_modules
 .next
 .vercel
+.gitignore
+.DS_Store
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+dist
+build
+coverage
+.idea
+.vscode
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log* 
